HomeWork5 - fixed Book.java - fixed long to Long in Book - fixed in schema.sql - fixed in AuthorRepositoryJdbc - fixed in BookRepositoryJdbc + added bookwithoutgenres in dataset - fixed in BookServiceImpl